matrix-dimension-ServiceClusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-dimension-cip
spec:
  selector:
    app: matrix-dimension
  ports:
    - port: 80
      targetPort: 8184
  type: ClusterIP
